# recon-ai

./: Dockerfile  README.md  bank.sql  chmod.sh  docker-compose.yml  install_llama.sh  pyproject.toml
atm_recon_ai/: __main__.py  atm_recon_ai.py
atm_recon_ai/ollama/: call_ollama.py
atm_recon_ai/postgres/: postgres.py
config/: video_metadata.json
data/: atm_transactions.csv
