[project]
name = "recon-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "lastseenjustnow",email = "lastseenjustnow@protonmail.com"},
    {name = "Sheeshma",email = "sheeshma.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pandas = "==2.3.2"
requests = "==2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
